--- a/EE Calculator/Views/ShellPage.xaml
+++ b/EE Calculator/Views/ShellPage.xaml
@@ -34,6 +34,7 @@
             Edit String/en-US/Resources.resw: Add a menu item title for each page
             -->
             <winui:NavigationViewItem x:Uid="Shell_Main" Icon="Document" helpers:NavHelper.NavigateTo="views:MainPage" />
+            <winui:NavigationViewItem x:Uid="Shell_Help" Icon="Help" helpers:NavHelper.NavigateTo="views:HelpPage" />
         </winui:NavigationView.MenuItems>
         <i:Interaction.Behaviors>
             <behaviors:NavigationViewHeaderBehavior
